Fixing link to dark clock image

--- a/css/rj-clock.css
+++ b/css/rj-clock.css
@@ -25,7 +25,7 @@
 }
 
 .rjc-dark .rjc-clock-face {
-    background-image: url('../img/clock-dark.png');
+    background-image: url('../img/clock.png');
 }
 
 .rjc-light .rjc-clock-face {
